@@ -1,0 +1,12 @@
+// PR c++/14481
+// { dg-options "-Wunused" }
+
+void func()
+{
+  struct mybitfields {
+    unsigned int s_field:8;
+  };
+  struct mybitfields s;
+  s.s_field = 255;
+};
+
